# Domain-Inference

./: .gitignore  .gitingore  README.md  pyproject.toml  todo  wordnet_demo.ipynb
data/initial_from_wordnet/: best_dict_bert-base-multilingual-uncased-sentiment_1610.json  best_dict_emotion-english-distilroberta-base_1610.json  best_sentences_dict_bert-base-multilingual-uncased-sentiment.json  best_sentences_dict_bert-tiny-finetuned-sms-spam-detection.json  best_sentences_dict_emotion-english-distilroberta-base.json  best_sentences_dict_roberta_toxicity_classifier.json  best_sentences_dict_sms-spam-classification-with-bert.json  best_sentences_dict_spam-classifier.json  sentences_dict_bert-base-multilingual-uncased-sentiment.json  sentences_dict_bert-tiny-finetuned-sms-spam-detection.json  sentences_dict_emotion-english-distilroberta-base.json  sentences_dict_roberta_toxicity_classifier.json  sentences_dict_sms-spam-classification-with-bert.json  sentences_dict_spam-classifier.json
docs/: development_guide.md
domain_discover/: blackbox.py  cli.py  diffusion.py  generater.py  genrater_T5.py  metrics.py  optimizer.py  pipeline.py  prompt_vector.py  reinforce.py  requirements.txt  seq2seq_sampler.py  test_bert.py  test_wordnet.py  wordnet_conditioner.py
scripts/: config.py  optimize_embedding.py  prefix_tuning_T5.py  run.sh  test_direction.py  test_two_direction_set.py  visualize_optimize_embedding.py
src/domain_infer/: __init__.py  classifier.py  generater.py  optimizer.py  wordnet_init.py
test/: test_center_embeddings.py  test_prefix_T5.py  test_wordnet.py
